new article working, BUG: empty heading allowed

--- a/sites/new.hbs
+++ b/sites/new.hbs
@@ -9,7 +9,7 @@
 <body>
     {{>navigation}}
     <div>
-        <form method = "POST" action="/" class="new-blog-form">
+        <form method = "POST" action="/new" class="new-blog-form">
             <input type="text" name="heading"placeholder="Heading">
             <textarea name="content" placeholder="Sample Content"></textarea>
             <input type="submit" name="submit">
